--- a/css/style.css
+++ b/css/style.css
@@ -21,25 +21,59 @@ nav{
     align-items: center;
 }
 
-#buscador{
+#buscador {
     background-color: var(--principal);
     color: var(--secundario);
     border: 2px solid var(--secundario);
     border-radius: 25px;
-    padding: 10px;
-    width: 500px;
+    width: 100%; 
     font-family: var(--karla);
+    box-sizing: border-box;
+    font-size: 14px; 
+    padding: 8px; 
 }
 
 #registroButton{
     background-color: var(--principal);
     border: 2px solid var(--tercer);
     border-radius: 25px;
-    padding: 10px;
+    padding: 6px;
+    font-size: 12px;
+    margin: 2px; 
 }
 #registroButton a{
     color: var(--tercer);
     text-decoration: none;
     font-family: var(--exo2);
     font-weight: 600;
+    
+}
+#registroButtonPC{
+    display: none;
+}
+/* -- RESPONSIVE -- */
+@media only screen and (max-width: 600px){
+
+}
+@media only screen and (min-width: 601px) and (max-width: 960px){
+
+}
+
+@media only screen and (min-width: 901px){
+    /* -- HEADER -- */
+    #buscador {
+        font-size: 14px; 
+        padding: 10px;
+        width: 500px;
+    }
+    #registroButton{
+        padding: 10px;
+        font-size: 16px; 
+    }
+    #registroButtonMobile{
+        display: none;
+    }
+    #registroButtonPC{
+        display: block;
+    }
 }
