--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@
     position: relative;
 }
 /* SHOP */
-.shop, .shopInfo{
+.shop, .shopInfo {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,6 +42,9 @@
 }
 .shop{
     height: 450px;
+}
+.shopInfo{
+    width: 100%;
 }
 .shopInfo h2{
     font-family: var(--exo2);
@@ -53,8 +56,31 @@
     font-family: var(--karla);
     font-weight: 600;
     color: var(--secundario);
+    
+}
+.shopBody{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+}
+.card {
+    max-width: 200px;
+    display: flow;
+    max-height: 350px;
+    text-align: center;
+}
+.imgContainer {
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
 }
 
+.imgContainer img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
 /* SECTION */
 #sobreNosotros{
     background-image: url(../img/sobreNosotros1.jpg);
@@ -130,6 +156,9 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+    }
+    .container{
+        margin-bottom: 30px;
     }
     #sobreNosotrosPCFotos{
         display: flex;
