--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -14,6 +14,7 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    border-bottom: 4px solid var(--secundario);
 }
 video {
     width: 100%;
@@ -26,4 +27,82 @@ video {
     height: 101vh;
     top: -101vh;
     background-color: #1b1b1b92;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#infoVideo h2{
+    font-family: var(--exo2);
+    font-weight: 700;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 42px;
+    padding: 8px;
+    text-shadow: 4px 4px #333333b7;
+}
+#infoVideo span{
+    color: var(--tercer);
+}
+.overlay button{
+    position: relative;
+    top: 250px;
+    background-color: transparent;
+    border: 0px;
+}
+
+#servicios{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#serviciosCase{
+    display: flex;
+    flex-direction: column;  
+    width: 90%; 
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+
+#servicios h2, #servicios h3{
+    font-family: var(--exo2);
+    color: var(--tercer);
+    font-weight: 600;
+}
+
+#servicios h2{
+    text-transform: uppercase;
+    font-size: 36px;
+}
+.serviciosCaseInfo{
+    padding: 12px;
+    border: 2px solid var(--secundario);
+    border-radius: 25px;
+    margin: 12px;
+    width: 300px;
+}
+/* -- RESPONSIVE -- */
+@media only screen and (max-width: 600px){
+
+}
+@media only screen and (min-width: 601px) and (max-width: 960px){
+
+}
+
+@media only screen and (min-width: 960px){
+    /* -- SECTION -- */
+    #infoVideo h2{
+        font-size: 56px;
+        padding: 0px;
+    }
+    #serviciosCase{
+        display: flex;
+        flex-direction: row;  
+        width: 100%; 
+        justify-content: space-evenly;
+        margin-top: 12px;
+    }
 }
