--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -58,10 +58,14 @@ video {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 36px;
+    margin-bottom: 12px;
 }
 #serviciosCase{
     display: flex;
-    flex-direction: column;  
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center;
     width: 90%; 
     margin-top: 12px;
     margin-bottom: 12px;
@@ -69,20 +73,44 @@ video {
 
 #servicios h2, #servicios h3{
     font-family: var(--exo2);
-    color: var(--tercer);
     font-weight: 600;
 }
-
+#servicios h3{
+    text-align: center;
+}
 #servicios h2{
     text-transform: uppercase;
     font-size: 36px;
+    color: var(--tercer);
 }
 .serviciosCaseInfo{
     padding: 12px;
-    border: 2px solid var(--secundario);
-    border-radius: 25px;
-    margin: 12px;
-    width: 300px;
+    border-radius: 20px;
+    margin-bottom: 36px;
+    width: 350px;
+    font-family: var(--karla);
+    background-color: var(--tercer);
+    color: var(--principal);
+    -webkit-box-shadow: 0px 0px 35px 5px rgba(91,133,217,1);
+    -moz-box-shadow: 0px 0px 35px 5px rgba(91,133,217,1);
+    box-shadow: 0px 0px 35px 5px rgba(91,133,217,1);
+}
+.serviciosCaseInfo:hover {
+    background-color: var(--principal);
+    color: var(--tercer);
+    transform: scale(1.1);
+    transition: 0.7s all;
+}
+.serviciosCaseInfo p{
+    text-align: center;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+
+
+#marcas{
+    background-color: var(--tercer);
 }
 /* -- RESPONSIVE -- */
 @media only screen and (max-width: 600px){
@@ -103,6 +131,7 @@ video {
         flex-direction: row;  
         width: 100%; 
         justify-content: space-evenly;
-        margin-top: 12px;
+        margin-top: 36px;
+        align-items: normal;
     }
 }
