cambio de redireccion en procesarProducto.php, correccion error header.php y cambios css profile

--- a/css/profile.css
+++ b/css/profile.css
@@ -47,6 +47,7 @@ h5{
     display: flow;
     max-height: 350px;
     text-align: center;
+    overflow: hidden;
 }
 .imgContainer {
     width: 200px;
