--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -94,6 +94,7 @@ video {
     -webkit-box-shadow: 0px 0px 35px 5px rgba(91,133,217,1);
     -moz-box-shadow: 0px 0px 35px 5px rgba(91,133,217,1);
     box-shadow: 0px 0px 35px 5px rgba(91,133,217,1);
+    transition: transform 0.7s ease-in-out;
 }
 .serviciosCaseInfo:hover {
     background-color: var(--principal);
@@ -106,9 +107,46 @@ video {
     font-weight: 500;
     font-size: 18px;
 }
+#marcas{
+    padding: 24px;
+    padding-bottom: 0px;
+}
+#marcasInfo{
+    padding: 12px;
+}
+#marcasInfo h2{
+    font-family: var(--exo2);
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 700;
+    color: var(--principal);
+}
+#marcasInfo h4{
+    font-family: var(--karla);
+    text-align: center;
+    font-weight: 600;
+    color: var(--secundario);
+}
 
+.marcasInfoText{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 12px;
+    text-align: center;
+}
+.marcasInfoText h3{
+    text-transform: capitalize;
+    color: var(--principal);
+}
+.marcasInfoText p{
+    font-size: 18px;
+}
 
-
+.marcasInfoImg{
+    display: none;
+}
 #marcas{
     background-color: var(--tercer);
 }
@@ -133,5 +171,18 @@ video {
         justify-content: space-evenly;
         margin-top: 36px;
         align-items: normal;
+    }
+    .marcasInfoImg{
+        display: flex;
+        justify-content: center;
+    }
+    #textoDerecha{
+        text-align: right;
+    }
+    .marcasInfoText div{
+        width: 49%;
+    }
+    #textoIzquierda{
+        text-align: left;
     }
 }
