--- a/css/style.css
+++ b/css/style.css
@@ -181,10 +181,12 @@ footer{
 }
 #contenido {
     position: absolute;
+    top: 61px;
     text-align: justify;
     padding: 0;
     margin-left: 50px;
-    border-radius: 5px;
+    border-radius: 0 0 20px 20px;
+    overflow: hidden;
     background: var(--principal);
     z-index: 100000;
 }
@@ -192,11 +194,18 @@ footer{
     list-style: none;
     padding: 10px;
     
-    
+    border-bottom: #747474 1px solid;
     margin: 0;
     width: 400px;
     
 }
+#contenido > :last-child {
+    border: none;
+}
+#contenido li:nth-child(7) {
+    border: none;
+}
+
 #contenido li:nth-child(n+8) {
     display: none;
 }
