--- a/css/checkOut.css
+++ b/css/checkOut.css
@@ -19,7 +19,12 @@ h3, h4{
     color: var(--tercer);
     font-weight: 700;
 }
-
+#posicionCase{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
 .card-button{
     background-color: var(--tercer);
     color: var(--principal);
@@ -33,43 +38,41 @@ h3, h4{
 .case{
     background-color: var(--principal);
     border-radius: 25px;
-    width: 50%;
+    width: 80%;
     padding: 18px;
     margin-bottom: 26px;
     margin-top: 26px;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+hr{
+    width: 90%;
+    margin-top: -2px;
 }
 #caseCenter{
     display: flex;
     align-items: center;
     justify-content: center;
 }
-hr{
-    width: 90%;
-    margin-top: -2px;
+#caseProduct {
+    display: flex;
+    flex-direction: column;
 }
-#caseProduct{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-}
-#caseProductImg{
-    max-height: 400px;
+    
+#caseProductImg { 
     overflow: hidden;
-    border-radius: 20px;
-    width: 90%;
+    display: flex;
 }
 #caseProductImg img{
     width: 100%;
-    max-width: 400px;
-    max-height: 400px;
+    border-radius: 20px;
+    max-width: 450px;
+    max-height: 450px;
+    margin-bottom: 12px;
+    object-fit: cover;
 }
 #caseProductInfo { 
-    grid-area: 1 / 2 / 2 / 3; 
     padding: 6px;
     background-color: white;
     border-radius: 20px;
@@ -77,6 +80,43 @@ hr{
     align-items: center;
     flex-direction: column;
     justify-content: center;
+}
+#formularioContacto{
+    background-color: var(--principal);
+    border-radius: 25px;
+    padding: 16px;
+    width: 100%;
+}
+#formularioContacto form{
+    display: flex;
+    flex-direction: column;
+}
+
+/* -- FORMULARIO -- */
+label{
+    margin-bottom: 4px;
+    font-family: var(--exo2);
+    font-weight: 500;
+}
+input, textarea, select{
+    margin-bottom: 8px;
+    border-radius: 12px;
+    border: 0px;
+}
+textarea{
+    resize: none;
+    padding: 4px;
+}
+input{
+    padding: 4px;
+}
+#enviar{
+    background-color: var(--tercer);
+    color: var(--principal);
+    font-weight: 700;
+    width: 25%;
+    margin: auto;
+    margin-top: 8px;
 }
 
 /* -- RESPONSIVE -- */
@@ -90,5 +130,14 @@ hr{
 @media only screen and (min-width: 960px){
     h5{
         font-size: 20px;
+    }
+    #posicionCase{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: normal;
+    }
+    .case{
+        width: 40%;
     }
 }
