implementacion funcion de buscar y mostra solo productos validados en la tienda

--- a/css/style.css
+++ b/css/style.css
@@ -208,8 +208,9 @@ footer{
 
 #contenido li:nth-child(n+8) {
     display: none;
+}#tecla { 
+    display: none;
 }
-
 /* -- RESPONSIVE -- */
 @media only screen and (max-width: 600px){
 
