--- a/css/productoCase.css
+++ b/css/productoCase.css
@@ -11,7 +11,9 @@
 }
 
 .card {
+    float: right;
     max-width: 200px;
+    flex-wrap: wrap;
     display: flow;
     align-items: center;
     max-height: 350px;
@@ -50,17 +52,55 @@
     font-family: var(--exo2);
     font-weight: 600;
 }
-
-/* -- RESPONSIVE -- */
-@media only screen and (max-width: 600px){
-
+.disabled{
+    background-color: #000000;
+   
+    filter:alpha(opacity=50);
 }
+.disabled svg{
+    filter: brightness(150%);
+    position: absolute;
+    left: 5px;
+    z-index: 10;
+}
+.pending{
+    position: absolute;
+    color: #fff;
+    top: 8px;
+    left: 39px;
+    z-index: 10;
+}
+.shopBodyContent{
+    overflow-y: auto;
+    width: 100%;
+    z-index: 50;
+}
+.shopBody{
+    width: 1200px;
+    justify-content: space-between;
+}
+
+.shopBodyContent::-webkit-scrollbar {
+    width: 0.11px;
+    height: 6px;
+}
+
+.shopBodyContent::-webkit-scrollbar-thumb {
+    background-color: #9f9f9f;
+    border-radius: 1vw;
+}
+
+.shopBodyContent::-webkit-scrollbar-track {
+    background-color: #fff;
+    border-radius: 1vw;
+    width: 0.1px;
+    height: 6px;
+}
+/*VERSION TABLET*/
 @media only screen and (min-width: 601px) and (max-width: 960px){
-    .shopBody{
-        justify-content: space-between;
-    }
-}
 
+}
+/*VERSION ORDENADOR*/
 @media only screen and (min-width: 960px){
     /* -- SECTION -- */
     #sobreNosotrosPC{
@@ -131,7 +171,8 @@
         text-decoration: none;
         font-weight: 600;
     }
-    .shopBody{
-        justify-content: space-between;
+     .shopBodyContent{
+        overflow-y: auto;  
     }
+     
 }
