--- a/css/tienda.css
+++ b/css/tienda.css
@@ -11,19 +11,18 @@
 }
 
 .container{
-    display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
 }
 .card{
-    width: 200px;
+    width: 1800px;
 }
 
 .card {
-    max-width: 200px;
+    max-width: 180px;
     display: flow;
     max-height: 350px;
     text-align: center;
+    margin-right: 10px;
 }
 .imgContainer {
     width: 200px;
@@ -54,4 +53,34 @@ hr{
     width: 98%;
     margin-left: 12px;
     margin-top: 0px;
+}
+
+
+/* .container{
+    overflow-y: auto;
+    width: 100%;
+}*/
+.containerBodyC{
+    width: 1270px;
+}   
+.containerBody{
+    overflow-y: auto;
+    width: 100%;
+}  
+
+.containerBody::-webkit-scrollbar {
+    width: 0.11px;
+    height: 6px;
+}
+
+.containerBody::-webkit-scrollbar-thumb {
+    background-color: #9f9f9f;
+    border-radius: 1vw;
+}
+
+.containerBody::-webkit-scrollbar-track {
+    background-color: #fff;
+    border-radius: 1vw;
+    width: 0.1px;
+    height: 2px;
 }
