Cambio de contraseña url solucionado

--- a/css/productoCase.css
+++ b/css/productoCase.css
@@ -172,7 +172,9 @@
         font-weight: 600;
     }
      .shopBodyContent{
-        overflow-y: auto;  
+        overflow-y: auto; 
+        display: flex;
+        justify-content: center; 
     }
      
 }
